--- a/.github/workflows/copy-content.yml
+++ b/.github/workflows/copy-content.yml
@@ -41,7 +41,7 @@ jobs:
         src_path: ./email/.
         dst_path: /content/email/
         dst_owner: aspose-cloud
-        dst_repo_name: products-qa.aspose.cloud
+        dst_repo_name: products.aspose.cloud
         dst_branch: main
         src_branch: main
         clean: true
